html/css/index.css
@import url("../../node_modules/normalize.css/normalize.css");
@import url("../../node_modules/font-awesome/css/font-awesome.css");
@import url("roboto.css");

html {
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}

body {
  font-family: Roboto, sans-serif;
  width: 90%;
  max-width: 960px;
  margin: 20px auto;
}

section {
  margin-bottom: 4em;
}

section:last-child {
  margin-bottom: 0;
}

canvas {
  width: 100%;
}

canvas#deltas {
  height: 150px;
}

a, a:visited {
  color: inherit;
  text-decoration: none;
}

.status {
  width: 50%;
  min-width: 290px;
  display: inline-block;
}

.status h3 {
  font-weight: 400;
}
.status.master h3 {
  font-weight: 900;
}
.status.master .role td {
  font-weight: 900;
}

table {
  width: 100%;
  border-collapse: collapse;
}


th {
  text-align: left;
  min-width: 7em;
  font-weight: 400;
}

td {
  font-weight: 300;
}

.time {
  display: inline-block;
  width: 4em;
}

button {
  font-size: 30px;
  margin-right: 1.5em;
  margin-bottom: 1.5em;
  background-color: transparent;
  border: none;
  width: 2.5em;
  text-align: center;
}

button .icon-container {
  display: block;
  border: 0.075em solid #333;
  border-radius: 1em;
  margin: 0 auto;
  width: 2em;
  height: 2em;
  transition: all 0.05s;
}

button .icon-container i {
  line-height: 1.85em;
  transition: all 0.05s;
}

button.dangerous .icon-container {
  background-color: red;
}

button label {
  font-size: 0.5em;
  display: block;
  text-transform: uppercase;
  margin-top: 0.5em;
}

button:hover .icon-container {
  border: 0.25em solid #000;
  box-shadow: 0px 0px 7px 0px #444;
}

button:hover .icon-container i {
  line-height: 1.5em;
}

button:hover label {
  font-weight: 900;
}

button:focus {
  outline: none;
}

button:last-child {
  margin-right: 0;
}

